--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://bhc3g0fzy9znkhyfygav-mysql.services.clever-cloud.com:3306/bhc3g0fzy9znkhyfygav
+spring.datasource.username=uyer67qad6kzmoms
+spring.datasource.password=ZIWf9ZsVroEYvinFKNH4
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
